--- a/app/src/main/res/layout/activity_my_collect.xml
+++ b/app/src/main/res/layout/activity_my_collect.xml
@@ -1,60 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/load_more_list_view_ptr_frame"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/load_more_list_view_ptr_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dip"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/layout_search"
-            android:layout_width="match_parent"
-            android:layout_height="44dip"
-            android:layout_marginLeft="15dip"
-            android:layout_marginRight="15dip"
-            android:layout_marginTop="10dip"
-            android:background="@drawable/growup_search">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="17dip"
-                    android:layout_height="17dip"
-                    android:src="@drawable/search_logo" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:text="@string/search" />
-            </LinearLayout>
-        </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="8dip"
-            android:layout_marginTop="10dip"
-            android:background="#eeeeee" />
-        <com.uuzz.android.ui.view.ptr.PtrListView
-            android:id="@+id/lv_listview"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/bg_item_white_touchable"
-            android:clickable="true"
-            android:divider="#e1e1e1"
-            android:dividerHeight="1dip"
-            android:fadingEdge="none"
-            android:focusable="true"
-            android:listSelector="@drawable/bg_item_white_touchable"
-            android:scrollbarStyle="outsideOverlay" />
-    </LinearLayout>
+            android:layout_marginBottom="10dip"
+            android:orientation="vertical">
 
-</com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout>
+            <RelativeLayout
+                android:id="@+id/layout_search"
+                android:layout_width="match_parent"
+                android:layout_height="44dip"
+                android:layout_marginLeft="15dip"
+                android:layout_marginRight="15dip"
+                android:layout_marginTop="10dip"
+                android:background="@drawable/growup_search">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="17dip"
+                        android:layout_height="17dip"
+                        android:src="@drawable/search_logo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dip"
+                        android:text="@string/search" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dip"
+                android:layout_marginTop="10dip"
+                android:background="#eeeeee" />
+
+            <com.uuzz.android.ui.view.ptr.PtrListView
+                android:id="@+id/lv_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_item_white_touchable"
+                android:clickable="true"
+                android:divider="#e1e1e1"
+                android:dividerHeight="1dip"
+                android:fadingEdge="none"
+                android:focusable="true"
+                android:listSelector="@drawable/bg_item_white_touchable"
+                android:scrollbarStyle="outsideOverlay" />
+        </LinearLayout>
+
+    </com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout>
+
+    <TextView
+        android:id="@+id/tv_sign_no_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:text="暂无收藏"/>
+</RelativeLayout>
