--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -19,6 +19,7 @@
         android:layout_below="@+id/tv_collect_title"
         android:layout_marginTop="10dip"
         android:layout_marginBottom="10dip"
+        android:background="#f1f2f4"
         android:src="@drawable/bg_collect_default"
         android:layout_marginLeft="@dimen/primary_margin"/>
     <TextView
