--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -7,8 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/primary_margin"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/primary_margin">
 
         <RelativeLayout
             android:id="@+id/layout_mine_info"
@@ -22,7 +22,7 @@
                 android:id="@+id/iv_my_head_pic"
                 android:layout_width="80dip"
                 android:layout_height="80dip"
-                android:scaleType="center"/>
+                android:scaleType="center" />
 
             <TextView
                 android:id="@+id/tv_show_myname"
@@ -68,91 +68,101 @@
             android:layout_marginTop="@dimen/primary_List_margin"
             android:background="#e1e1e1" />
 
-        <RelativeLayout
+        <!--中间模块-->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/primary_margin"
-            android:layout_marginRight="@dimen/primary_margin"
-            android:layout_marginTop="@dimen/primary_List_margin">
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_my_money_pic"
-                android:layout_width="28dip"
-                android:layout_height="28dip"
-                android:layout_centerVertical="true"
-                android:layout_marginBottom="21dip"
-                android:layout_marginTop="25dip"
-                android:src="@drawable/mymoney" />
+            <RelativeLayout
+                android:id="@+id/layout_gas"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/primary_margin">
 
-            <TextView
-                android:id="@+id/tv_show_my_money"
-                style="@style/tv_personal_info_item_left_text"
-                android:layout_marginLeft="20dip"
-                android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_toRightOf="@+id/iv_my_money_pic"
-                android:text="98,888"
-                android:textColor="#ff4f64"
-                android:textSize="21dip" />
+                <ImageView
+                    android:id="@+id/iv_my_money_pic"
+                    android:layout_width="20dip"
+                    android:layout_height="30dip"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="21dip"
+                    android:src="@drawable/my_money" />
 
-            <TextView
-                android:id="@+id/textView3"
-                style="@style/tv_personal_info_item_left_text"
-                android:layout_marginTop="18dip"
-                android:layout_toRightOf="@+id/tv_show_my_money"
-                android:text="元"
-                android:textSize="14dip" />
+                <TextView
+                    android:id="@+id/tv_show_money"
+                    style="@style/tv_personal_info_item_left_text"
+                    android:layout_marginLeft="25dip"
+                    android:layout_marginTop="@dimen/primary_List_margin"
+                    android:layout_toRightOf="@+id/iv_my_money_pic"
+                    android:text="98,888"
+                    android:textColor="#ff4f64"
+                    android:textSize="21dip" />
+
+                <TextView
+                    style="@style/tv_personal_info_item_left_text"
+                    android:layout_marginLeft="5dip"
+                    android:layout_marginTop="18dip"
+                    android:layout_toRightOf="@+id/tv_show_money"
+                    android:text="元"
+                    android:textSize="14dip" />
+
+                <TextView
+                    style="@style/tv_personal_info_item_left_text"
+                    android:layout_below="@+id/tv_show_money"
+                    android:layout_marginLeft="20dip"
+                    android:layout_marginRight="30dip"
+                    android:layout_marginTop="7dip"
+                    android:layout_toRightOf="@+id/iv_my_money_pic"
+                    android:layout_marginBottom="@dimen/primary_text_size"
+                    android:text="成长加油站" />
+            </RelativeLayout>
 
             <View
                 android:id="@+id/v_vertical_divider"
                 android:layout_width="1dip"
                 android:layout_height="40dip"
-                android:layout_centerInParent="true"
+                android:layout_gravity="center"
                 android:background="#e1e1e1" />
 
-            <ImageView
-                android:id="@+id/iv_my_sign"
-                android:layout_width="24dip"
-                android:layout_height="24dip"
-                android:layout_marginBottom="21dip"
-                android:layout_marginLeft="25dip"
-                android:layout_marginTop="25dip"
-                android:layout_toRightOf="@+id/v_vertical_divider"
-                android:src="@drawable/mysign" />
+            <RelativeLayout
+                android:id="@+id/layout_sign"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dip">
 
-            <TextView
-                android:id="@+id/tv_show_my_sign"
-                style="@style/tv_personal_info_item_left_text"
-                android:layout_marginLeft="27dip"
-                android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_toRightOf="@+id/iv_my_sign"
-                android:text="1"
-                android:textColor="#f5a623"
-                android:textSize="21dip" />
+                <ImageView
+                    android:id="@+id/iv_my_sign"
+                    android:layout_width="20dip"
+                    android:layout_height="30dip"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="21dip"
+                    android:src="@drawable/mysign" />
 
-            <TextView
-                style="@style/tv_personal_info_item_left_text"
-                android:layout_marginTop="18dip"
-                android:layout_toRightOf="@+id/tv_show_my_sign"
-                android:text="天"
-                android:textSize="14dip" />
+                <TextView
+                    android:id="@+id/tv_look"
+                    style="@style/tv_personal_info_item_left_text"
+                    android:layout_marginLeft="39dip"
+                    android:layout_marginTop="20dip"
+                    android:layout_toRightOf="@+id/iv_my_sign"
+                    android:text="查看"
+                    android:textColor="#f5a623"
+                    android:textSize="14dip" />
 
-            <TextView
-                android:id="@+id/textView4"
-                style="@style/tv_personal_info_item_left_text"
-                android:layout_below="@+id/tv_show_my_sign"
-                android:layout_marginLeft="9dip"
-                android:layout_marginTop="7dip"
-                android:layout_toRightOf="@+id/iv_my_sign"
-                android:text="@string/sign_record" />
+                <TextView
+                    style="@style/tv_personal_info_item_left_text"
+                    android:layout_below="@+id/tv_look"
+                    android:layout_marginLeft="17dip"
+                    android:layout_marginTop="7dip"
+                    android:layout_marginRight="30dip"
+                    android:layout_toRightOf="@+id/iv_my_sign"
+                    android:layout_marginBottom="@dimen/primary_text_size"
+                    android:text="签到记录" />
+            </RelativeLayout>
+        </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView"
-                style="@style/tv_personal_info_item_left_text"
-                android:layout_alignLeft="@+id/tv_show_my_money"
-                android:layout_alignStart="@+id/tv_show_my_money"
-                android:layout_alignTop="@+id/textView4"
-                android:text="@string/growup_comeon" />
-        </RelativeLayout>
+        <!--列表模块-->
 
         <View
 
@@ -167,9 +177,9 @@
 
             <TextView
                 style="@style/tv_personal_info_item_left_text"
+                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:layout_marginLeft="@dimen/primary_margin"
                 android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:text="@string/health_data" />
         </RelativeLayout>
 
@@ -187,9 +197,9 @@
 
             <TextView
                 style="@style/tv_personal_info_item_left_text"
+                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:layout_marginLeft="@dimen/primary_margin"
                 android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:text="@string/medicine_remind" />
         </RelativeLayout>
 
@@ -205,9 +215,9 @@
 
             <TextView
                 style="@style/tv_personal_info_item_left_text"
+                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:layout_marginLeft="@dimen/primary_margin"
                 android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:text="@string/my_message" />
         </RelativeLayout>
 
@@ -225,9 +235,9 @@
 
             <TextView
                 style="@style/tv_personal_info_item_left_text"
+                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:layout_marginLeft="@dimen/primary_margin"
                 android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:text="@string/my_collect" />
         </RelativeLayout>
 
@@ -265,9 +275,9 @@
 
             <TextView
                 style="@style/tv_personal_info_item_left_text"
+                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:layout_marginLeft="@dimen/primary_margin"
                 android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:text="@string/club_introduction" />
         </RelativeLayout>
 
@@ -283,9 +293,9 @@
 
             <TextView
                 style="@style/tv_personal_info_item_left_text"
+                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:layout_marginLeft="@dimen/primary_margin"
                 android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_marginBottom="@dimen/primary_List_margin"
                 android:text="@string/my_exit" />
         </RelativeLayout>
 
