--- a/app/src/main/res/layout/activity_my_collect.xml
+++ b/app/src/main/res/layout/activity_my_collect.xml
@@ -16,7 +16,6 @@
             android:orientation="vertical">
 
             <RelativeLayout
-                android:id="@+id/layout_search"
                 android:layout_width="match_parent"
                 android:layout_height="44dip"
                 android:layout_marginLeft="15dip"
@@ -24,23 +23,41 @@
                 android:layout_marginTop="10dip"
                 android:background="@drawable/growup_search">
 
+                <ImageView
+                    android:id="@+id/iv_search_show"
+                    android:layout_width="18dip"
+                    android:layout_height="18dip"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dip"
+                    android:src="@drawable/search_logo"
+                    android:visibility="gone" />
+
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dip"
+                    android:layout_toRightOf="@+id/iv_search_show"
+                    android:background="@null" />
+
                 <LinearLayout
+                    android:id="@+id/layout_search_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_centerVertical="true"
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="17dip"
-                        android:layout_height="17dip"
+                        android:layout_width="18dip"
+                        android:layout_height="18dip"
                         android:src="@drawable/search_logo" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dip"
-                        android:text="@string/search" />
+                        android:text="@string/search"
+                        android:textColor="@color/textColorLight" />
                 </LinearLayout>
             </RelativeLayout>
 
