--- a/app/src/main/res/layout/activity_question_list.xml
+++ b/app/src/main/res/layout/activity_question_list.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout
-    android:id="@+id/load_more_list_view_ptr_frame"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout
+        android:id="@+id/load_more_list_view_ptr_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="64dip"
-            android:background="#f7fbff">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <RelativeLayout
-                android:id="@+id/layout_search"
                 android:layout_width="match_parent"
                 android:layout_height="44dip"
-                android:layout_marginBottom="10dip"
                 android:layout_marginLeft="15dip"
                 android:layout_marginRight="15dip"
                 android:layout_marginTop="10dip"
                 android:background="@drawable/growup_search">
 
+                <ImageView
+                    android:id="@+id/iv_search_show"
+                    android:layout_width="18dip"
+                    android:layout_height="18dip"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dip"
+                    android:src="@drawable/search_logo"
+                    android:visibility="gone" />
+
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dip"
+                    android:layout_toRightOf="@+id/iv_search_show"
+                    android:background="@null" />
+
                 <LinearLayout
+                    android:id="@+id/layout_search_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -46,23 +58,28 @@
                         android:textColor="@color/textColorLight" />
                 </LinearLayout>
             </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dip"
+                android:layout_marginTop="10dip"
+                android:background="#eeeeee" />
+
+            <com.uuzz.android.ui.view.ptr.PtrListView
+                android:id="@+id/lv_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_item_white_touchable"
+                android:clickable="true"
+                android:divider="#e1e1e1"
+                android:dividerHeight="1dip"
+                android:fadingEdge="none"
+                android:focusable="true"
+                android:listSelector="@drawable/bg_item_white_touchable"
+                android:scrollbarStyle="outsideOverlay" />
         </LinearLayout>
 
-        <com.uuzz.android.ui.view.ptr.PtrListView
-            android:id="@+id/lv_listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_item_white_touchable"
-            android:clickable="true"
-            android:divider="#e1e1e1"
-            android:dividerHeight="1dip"
-            android:fadingEdge="none"
-            android:focusable="true"
-            android:listSelector="@drawable/bg_item_white_touchable"
-            android:scrollbarStyle="outsideOverlay" />
-    </LinearLayout>
-
-</com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout>
+    </com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout>
 
     <RelativeLayout
         android:id="@+id/layout_ask"
@@ -90,6 +107,6 @@
         android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="暂无问题"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:text="暂无问题" />
 </RelativeLayout>
