--- a/app/src/main/res/layout/activity_search_question_layout.xml
+++ b/app/src/main/res/layout/activity_search_question_layout.xml
@@ -1,38 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="40dip"
+        android:background="@color/colorPrimary">
+
         <com.uuzz.android.ui.view.IconTextView
             android:id="@+id/icv_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:padding="@dimen/text_space"
             android:gravity="center"
-            android:text="@string/icon_search"/>
+            android:padding="@dimen/text_space"
+            android:textColor="@color/white"
+            android:textSize="25dip"
+            android:text="@string/icon_search" />
+
         <EditText
-            android:layout_toRightOf="@+id/icv_search"
-            android:layout_toLeftOf="@+id/tv_cancel"
-            android:layout_centerVertical="true"
+            android:id="@+id/et_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"/>
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dip"
+            android:cursorVisible="true"
+            android:layout_toLeftOf="@+id/tv_cancel"
+            android:layout_toRightOf="@+id/icv_search"
+            android:background="@null" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dip"
+            android:layout_toLeftOf="@+id/tv_cancel"
+            android:layout_toRightOf="@+id/icv_search"
+            android:background="@color/white"/>
+
         <TextView
             android:id="@+id/tv_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:text="取消"/>
+            android:layout_centerVertical="true"
+            android:textSize="18dip"
+            android:padding="5dip"
+            android:textColor="@color/white"
+            android:text="取消" />
     </RelativeLayout>
 
-    <ListView
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/tv_search_no_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:text="未搜到数据"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
